Исправление опечаток и переопределение классов формы на стр.photo

--- a/source/form.html
+++ b/source/form.html
@@ -121,7 +121,7 @@
             </div>
           </fieldset>
           <fieldset class="contest__apps apps-fields">
-            <legend class="apps-fields__legend">С каким приложением путешевствовали?</legend>
+            <legend class="apps-fields__legend">С каким приложением путешествовали?</legend>
             <div class="contest__wrapper">
               <ul>
                 <li class="apps-fields__option">
