--- a/source/photo.html
+++ b/source/photo.html
@@ -82,7 +82,7 @@
               <p class="photo-blog__comment">Прыгать или нет? напишите свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
               <footer class="photo-blog__likes likes">
                 <button class="likes__button js-likes-button" id="photos-id-1" type="button">Лайк</button>
-                <p class="likes__counts">Нравиться: <span class="js-likes-count" id="js-likes-1">215</span>
+                <p class="likes__counts">Нравится: <span class="js-likes-count" id="js-likes-1">215</span>
                 </p>
               </footer>
             </div>
@@ -99,7 +99,7 @@
               <p class="photo-blog__comment">Вчера он на луну летал, сегодня в руки к нам попал.</p>
               <footer class="photo-blog__likes likes">
                 <button class="likes__button js-likes-button" id="photos-id-2" type="button">Лайк</button>
-                <p class="likes__counts">Нравиться: <span class="js-likes-count" id="js-likes-2">356</span>
+                <p class="likes__counts">Нравится: <span class="js-likes-count" id="js-likes-2">356</span>
                 </p>
               </footer>
             </div>
@@ -116,7 +116,7 @@
               <p class="photo-blog__comment">Соседи будут рады!</p>
               <footer class="photo-blog__likes likes">
                 <button class="likes__button js-likes-button" id="photos-id-3" type="button">Лайк</button>
-                <p class="likes__counts">Нравиться: <span class="js-likes-count" id="js-likes-3">666</span>
+                <p class="likes__counts">Нравится: <span class="js-likes-count" id="js-likes-3">666</span>
                 </p>
               </footer>
             </div>
@@ -133,7 +133,7 @@
               <p class="photo-blog__comment">Здесь могла быть ваша цитата о высоком и вечном.</p>
               <footer class="photo-blog__likes likes">
                 <button class="likes__button js-likes-button" id="photos-id-4" type="button">Лайк</button>
-                <p class="likes__counts">Нравиться: <span class="js-likes-count" id="js-likes-4">215</span>
+                <p class="likes__counts">Нравится: <span class="js-likes-count" id="js-likes-4">215</span>
                 </p>
               </footer>
             </div>
@@ -150,7 +150,7 @@
               <p class="photo-blog__comment">Самая кубанская в мире!</p>
               <footer class="photo-blog__likes likes">
                 <button class="likes__button js-likes-button" id="photos-id-5" type="button">Лайк</button>
-                <p class="likes__counts">Нравиться: <span class="js-likes-count" id="js-likes-5">4</span>
+                <p class="likes__counts">Нравится: <span class="js-likes-count" id="js-likes-5">4</span>
                 </p>
               </footer>
             </div>
@@ -167,7 +167,7 @@
               <p class="photo-blog__comment">Где снег-то?</p>
               <footer class="photo-blog__likes likes">
                 <button class="likes__button js-likes-button" id="photos-id-6" type="button">Лайк</button>
-                <p class="likes__counts">Нравиться: <span class="js-likes-count" id="js-likes-6">150</span>
+                <p class="likes__counts">Нравится: <span class="js-likes-count" id="js-likes-6">150</span>
                 </p>
               </footer>
             </div>
@@ -184,7 +184,7 @@
               <p class="photo-blog__comment">Где снег-то?</p>
               <footer class="photo-blog__likes likes">
                 <button class="likes__button js-likes-button" id="photos-id-7" type="button">Лайк</button>
-                <p class="likes__counts">Нравиться: <span class="js-likes-count" id="js-likes-7">2560</span>
+                <p class="likes__counts">Нравится: <span class="js-likes-count" id="js-likes-7">2560</span>
                 </p>
               </footer>
             </div>
@@ -194,39 +194,57 @@
       </section> <!-- page-content__photos -->
 
       <section class="page-content__photo-uploads photo-uploads">
-        <h2 class="page-content__title photo-uploads__title">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</h2>
-        <form class="photo-uploads__form form" method="get" action="https://echo.htmlacademy.ru" id="uploads-form">
-          <fieldset class="form__picture">
-            <img class="form__downloaded" src="#img/photo-7-mobile.jpg" alt="Загружаемая фотография" width="280" height="374">
+        <h2 class="photo-uploads__title">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</h2>
+        <form class="photo-uploads__form form uploads" method="get" action="https://echo.htmlacademy.ru" id="uploads-form">
+          <fieldset class="uploads__picture">
+            <img class="uploads__downloaded" src="#img/photo-7-mobile.jpg" alt="Загружаемая фотография" width="280" height="374">
           </fieldset>
-          <fieldset class="photo-uploads__filters">
-            <div class="photo-uploads__toggles">
-              <button class="photo-uploads__toggle photo-uploads__toggle--active form__toggle--crop" form="uploads-form">
-                <span class="visually-hidden">Фильтр обрезание</span>
+          <fieldset class="uploads__filters">
+            <div class="filters">
+              <button class="filters__toggle filters__toggle--active form__toggle--crop">
+                <span class="visually-hidden">Фильтр кадрирования</span>
               </button>
-              <button class="photo-uploads__toggle photo-uploads__toggle--fill" form="uploads-form">
+              <button class="filters__toggle filters__toggle--fill">
                 <span class="visually-hidden">Фильтр заливка</span>
               </button>
-              <button class="photo-uploads__toggle photo-uploads__toggle--contrast" form="uploads-form">
+              <button class="filters__toggle filters__toggle--contrast">
                 <span class="visually-hidden">Фильтр контрастность</span>
               </button>
             </div>
-            <div class="form__list form-slider">
-              <div class="form__item form-slider__item">
-                <label class="visually-hidden" for="filter-crop-value">Настройка обрезания</label>
-                <input class="form__setting form__setting--active form__setting--corp" type="range" id="filter-crop-value" name="filter-crop" min="0" max="10">
+            <div class="uploads__list">
+              <div class="uploads__item">
+                <label class="visually-hidden" for="filter-crop-value">Настройка кадрирования</label>
+                <input class="visually-hidden" type="range" id="filter-fill-value" name="filter-fill" min="0" max="10">
+                <div class="form__range range">
+                  <div class="range__controls">
+                    <div class="range__scale"></div>
+                    <div class="range__runner"></div>
+                  </div>
+                </div>
               </div>
-              <div class="form__item filters-slider__item"></div>
+              <div class="uploads__item"></div>
                 <label class="visually-hidden" for="filter-fill-value">Настройка заливки</label>
-                <input class="form__setting form__setting--fill" type="range" id="filter-fill-value" name="filter-fill" min="0" max="10">
+                <input class="visually-hidden" type="range" id="filter-fill-value" name="filter-fill" min="0" max="10">
+                <div class="form__range range">
+                  <div class="range__controls">
+                    <div class="range__scale"></div>
+                    <div class="range__runner"></div>
+                  </div>
+                </div>
               </div>
-              <div class="form__item filters-slider__item">
+              <div class="uploads__item">
                 <label class="visually-hidden" for="filter-contrast-value">Настройка контрастности</label>
-                <input class="form__setting form__setting--contrast" type="range" id="filter-contrast-value" name="filter-contrast" min="0" max="10">
+                <input class="visually-hidden" type="range" id="filter-contrast-value" name="filter-contrast" min="0" max="10">
+                <div class="form__range range">
+                  <div class="range__controls">
+                    <div class="range__scale"></div>
+                    <div class="range__runner"></div>
+                  </div>
+                </div>
               </div>
           </fieldset>
-          <button class="button photo-uploads__post" type="submit">Запостить</button>
-          <button class="button photo-uploads__undo" type="Reset">Отмена</button>
+          <button class="button uploads__post" type="submit">Запостить</button>
+          <button class="button uploads__undo" type="Reset">Отмена</button>
         </form>
       </section> <!-- page-content__photo-uploads -->
 
