Исправление ошибок валидации

--- a/source/index.html
+++ b/source/index.html
@@ -118,12 +118,12 @@
               <p class="review__author">Николай Петров</p>
               <p class="review__text"><!-- ::before «-->Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!<!-- ::after »--></p>
             </li>
-            <p class="reviews__toggles slider__toggles">
-              <button class="slider__toggle" type="button" id="review-toggle-1">1</button>
-              <button class="slider__toggle" type="button" id="review-toggle-2">2</button>
-              <button class="slider__toggle" type="button" id="review-toggle-3">3</button>
-            </p>
           </ul> <!-- reviews__list -->
+          <div class="reviews__toggles slider__toggles">
+            <button class="slider__toggle" type="button" id="review-toggle-1">1</button>
+            <button class="slider__toggle" type="button" id="review-toggle-2">2</button>
+            <button class="slider__toggle" type="button" id="review-toggle-3">3</button>
+          </div>
         </div> <!-- wrapper -->
       </section> <!-- page-content__reviews -->
 
@@ -196,7 +196,6 @@
                   <!-- Здесь будет галочка/крестик ::before -->
                   <span class="option-yes visually-hidden"> - Да</span>
                 </td>
-              </tr>
               </tr>
             </tbody>
           </table> <!-- rates -->
