--- a/source/photo.html
+++ b/source/photo.html
@@ -214,7 +214,7 @@
             <div class="uploads__list">
               <div class="uploads__item">
                 <label class="visually-hidden" for="filter-crop-value">Настройка кадрирования</label>
-                <input class="visually-hidden" type="range" id="filter-fill-value" name="filter-fill" min="0" max="10">
+                <input class="visually-hidden" type="range" id="filter-crop-value" name="filter-fill" min="0" max="10">
                 <div class="form__range range">
                   <div class="range__controls">
                     <div class="range__scale"></div>
