Исправление опечатки в наименование класса

--- a/source/index.html
+++ b/source/index.html
@@ -85,7 +85,7 @@
 
       <section class="page-content__features features">
         <div class="features__wrapper">
-          <h2 class="page-content__title">Устали от серости мегаполиса?<br> Нам есть, что вам предложить!</h2>
+          <h2 class="features__title">Устали от серости мегаполиса?<br> Нам есть, что вам предложить!</h2>
           <img class="features__image" src="#img/screen_pink.png" alt="Телефон c розовой фотографией" width="157" height="320">
           <div class="features__item feature">
             <h3 class="feature__title">Поднимает настроение</h3>
