Удаление лишнего класса у Hamburger

--- a/source/form.html
+++ b/source/form.html
@@ -31,7 +31,7 @@
                 </svg>PINK
               </a>
             </div>
-            <button class="page-header__hamburger page-header__hamburger--icon" type="button">
+            <button class="page-header__hamburger" type="button">
               <span class="visually-hidden">Открыть меню</span>
             </button>
             <nav class="page-header__navigation main-nav">
