Переименование кнопки меню в моб версии

--- a/source/form.html
+++ b/source/form.html
@@ -32,7 +32,7 @@
               </a>
             </div>
             <button class="page-header__hamburger" type="button">
-              <span class="visually-hidden">Открыть меню</span>
+              <span class="visually-hidden">Управление меню</span>
             </button>
             <nav class="page-header__navigation main-nav">
               <ul class="main-nav__list">
