--- a/source/form.html
+++ b/source/form.html
@@ -42,7 +42,7 @@
                 <li class="main-nav__item">
                   <a class="main-nav__link" href="photo.html">Фотографии</a>
                 </li>
-                <li class="main-nav__item main-nav__active">
+                <li class="main-nav__item main-nav__item--active">
                   <a class="main-nav__link">Конкурс</a>
                 </li>
                 <li class="main-nav__item">
