Добавление ссылок на онлаин магазины для приложения pink

--- a/source/index.html
+++ b/source/index.html
@@ -53,22 +53,22 @@
           <h1 class="visually-hidden">Приложение PINK</h1>
           <img class="intro__image" src="#img/iphone-5-in-hand-png" alt="hand with phone">
           <div class="intro__apps apps">
-            <a class="button apps__buttom" href="#">Скачать приложение</a>
+            <a class="button apps__buttom" href="https://itunes.apple.com/ru/store">Скачать приложение</a>
             <ul class="apps__list">
               <li class="apps__item">
-                <a class="apps__link" href="#">
+                <a class="apps__link" href="https://itunes.apple.com/ru/store">
                   <img class="apps__img" src="#img/apple-logo.svg" alt="apple icon">
                   <span class="visually-hidden">Скачать приложение для apple</span>
                 </a>
               </li>
               <li class="apps__item">
-                <a class="apps__link" href="#">
+                <a class="apps__link" href="https://play.google.com/store/apps/">
                   <img class="apps__img" src="#img/android-logo.svg" alt="andriod icon">
                   <span class="visually-hidden">Скачать приложение для android</span>
                 </a>
               </li>
               <li class="apps__item">
-                <a class="apps__link" href="#">
+                <a class="apps__link" href="https://www.microsoft.com/ru-ru/store/top-free/apps/pc">
                   <img class="apps__img" src="#img/microsoft-logo.svg" alt="windows icon">
                   <span class="visually-hidden">Скачать приложение для windows phone</span>
                 </a>
