--- a/source/photo.html
+++ b/source/photo.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body class="inner-page">
@@ -39,7 +38,7 @@
               <li class="main-nav__item">
                 <a class="main-nav__link" href="index.html">Главная</a>
               </li>
-              <li class="main-nav__item main-nav__active">
+              <li class="main-nav__item main-nav__item--active">
                 <a class="main-nav__link">Фотографии</a>
               </li>
               <li class="main-nav__item">
