Создание препроцессорных файлов для блоков

--- a/source/index.html
+++ b/source/index.html
@@ -104,24 +104,24 @@
       <section class="page-content__reviews reviews reviews-slider">
         <div class="reviews__wrapper">
           <h2 class="visually-hidden">Отзывы:</h2>
-          <ul class="reviews__list slider__list">
-            <li class="reviews__item review slider__item" id="review-slider-1">
+          <ul class="reviews__list reviews-slider__list">
+            <li class="reviews__item review reviews-slider__item" id="review-slider-1">
               <p class="review__author">Николай Петров</p>
               <p class="review__text"><!-- ::before «-->Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!<!-- ::after »--></p>
             </li>
-            <li class="reviews__item review slider__item" id="review-slider-2">
+            <li class="reviews__item review reviews-slider__item" id="review-slider-2">
               <p class="review__author">Николай Петров</p>
               <p class="review__text"><!-- ::before «-->Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!<!-- ::after »--></p>
             </li>
-            <li class="reviews__item review slider__item" id="review-slider-3">
+            <li class="reviews__item review reviews-slider__item" id="review-slider-3">
               <p class="review__author">Николай Петров</p>
               <p class="review__text"><!-- ::before «-->Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!<!-- ::after »--></p>
             </li>
           </ul> <!-- reviews__list -->
-          <div class="reviews__toggles slider__toggles">
-            <button class="slider__toggle" type="button" id="review-toggle-1">1</button>
-            <button class="slider__toggle" type="button" id="review-toggle-2">2</button>
-            <button class="slider__toggle" type="button" id="review-toggle-3">3</button>
+          <div class="reviews__toggles reviews-slider__toggles">
+            <button class="reviews-slider__toggle" type="button" id="review-toggle-1">1</button>
+            <button class="reviews-slider__toggle" type="button" id="review-toggle-2">2</button>
+            <button class="reviews-slider__toggle" type="button" id="review-toggle-3">3</button>
           </div>
         </div> <!-- wrapper -->
       </section> <!-- page-content__reviews -->
@@ -150,50 +150,50 @@
                 <td class="rate__cell">
                   Розовый фильтр
                   <!-- Здесь будет галочка/крестик ::before -->
-                  <span class="option-yes visually-hidden"> - Да</span>
+                  <span class="rate__option rate__option--yes visually-hidden"> - Да</span>
                 </td>
                 <td class="rate__cell">
                   Розовый фильтр
                   <!-- Здесь будет галочка/крестик ::before -->
-                  <span class="option-yes visually-hidden"> - Да</span>
+                  <span class="rate__option rate__option--yes visually-hidden"> - Да</span>
                 </td>
                 <td class="rate__cell">
                   Розовый фильтр
                   <!-- Здесь будет галочка/крестик ::before -->
-                  <span class="option-yes visually-hidden"> - Да</span>
+                  <span class="rate__option rate__option--yes visually-hidden"> - Да</span>
                 </td>
               <tr>
                 <td class="rate__cell">
                   Смайлики
                   <!-- Здесь будет галочка/крестик ::before -->
-                  <span class="option-no visually-hidden"> - Нет</span>
+                  <span class="rate__option rate__option--no visually-hidden"> - Нет</span>
                 </td>
                 <td class="rate__cell">
                   Смайлики
                   <!-- Здесь будет галочка/крестик ::before -->
-                  <span class="option-yes visually-hidden"> - Да</span>
+                  <span class="rate__option rate__option--yes visually-hidden"> - Да</span>
                 </td>
                 <td class="rate__cell">
                   Смайлики
                   <!-- Здесь будет галочка/крестик ::before -->
-                  <span class="option-yes visually-hidden"> - Да</span>
+                  <span class="rate__option rate__option--yes visually-hidden"> - Да</span>
                 </td>
               </tr>
               <tr>
                 <td class="rate__cell">
                   Комментарии
                   <!-- Здесь будет галочка/крестик ::before -->
-                  <span class="option-no visually-hidden"> - Нет</span>
+                  <span class="rate__option rate__option--no visually-hidden"> - Нет</span>
                 </td>
                 <td class="rate__cell">
                   Комментарии
                   <!-- Здесь будет галочка/крестик ::before -->
-                  <span class="option-no visually-hidden"> - Нет</span>
+                  <span class="rate__option rate__option--no visually-hidden"> - Нет</span>
                 </td>
                 <td class="rate__cell">
                   Комментарии
                   <!-- Здесь будет галочка/крестик ::before -->
-                  <span class="option-yes visually-hidden"> - Да</span>
+                  <span class="rate__option rate__option--yes visually-hidden"> - Да</span>
                 </td>
               </tr>
             </tbody>
@@ -228,6 +228,52 @@
       </section> <!--page-contacts-->
 
     </main>
+
+    <footer class="page-footer footer">
+      <div class="footer__wrapper">
+        <div class="footer__logo logo">
+          <a href="index.html">
+            <svg class="logo__icon" width="60" height="45">
+              <use xlink:href="#icon-logo" x="0" y="0" />
+            </svg>PINK
+          </a>
+        </div>
+        <ul class="footer__social social">
+          <li>
+            <a class="social__button social__button--twitter" href="#">
+              <svg class="social__icon" width="18" height="14">
+                <use xlink:href="#icon-twitter" x="0" y="0" />
+              </svg>
+              <span class="visually-hidden">Twitter</span>
+            </a>
+          </li>
+          <li>
+            <a class="social__button social__button--facebook" href="#">
+              <svg class="social__icon" width="9" height="18">
+                <use xlink:href="#icon-facebook" x="0" y="0" />
+              </svg>
+              <span class="visually-hidden">Facebook</span>
+            </a>
+          </li>
+          <li>
+            <a class="social__button social__button--youtube" href="#">
+              <svg class="social__icon" width="15" height="13">
+                <use xlink:href="#icon-youtube" x="0" y="0" />
+              </svg>
+              <span class="visually-hidden">YouTube</span>
+            </a>
+          </li>
+        </ul>
+        <p class="footer__developper">
+          Разработано
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
+            <svg class="social__icon" width="15" height="13">
+              <use xlink:href="#icon-htmlacademy" x="0" y="0" />
+            </svg><span class="visually-hidden">htmlacademy.ru</span>
+          </a>
+        </p>
+      </div> <!-- wrapper -->
+    </footer>
 
   </body>
 </html>
