--- a/source/photo.html
+++ b/source/photo.html
@@ -249,18 +249,18 @@
 
     </main>
 
-    <footer class="page-footer">
-      <div class="wrapper">
-        <div class="page-footer__logo logo">
+    <footer class="page-footer footer">
+      <div class="footer__wrapper">
+        <div class="footer__logo logo">
           <a href="index.html">
             <svg class="logo__icon" width="60" height="45">
               <use xlink:href="#icon-logo" x="0" y="0" />
             </svg>PINK
           </a>
         </div>
-        <ul class="page-footer__social social">
+        <ul class="footer__social social">
           <li>
-            <a class="social-button social-button--twitter" href="#">
+            <a class="social__button social__button--twitter" href="#">
               <svg class="social__icon" width="18" height="14">
                 <use xlink:href="#icon-twitter" x="0" y="0" />
               </svg>
@@ -268,7 +268,7 @@
             </a>
           </li>
           <li>
-            <a class="social-button social-button--facebook" href="#">
+            <a class="social__button social__button--facebook" href="#">
               <svg class="social__icon" width="9" height="18">
                 <use xlink:href="#icon-facebook" x="0" y="0" />
               </svg>
@@ -276,7 +276,7 @@
             </a>
           </li>
           <li>
-            <a class="social-button social-button--youtube" href="#">
+            <a class="social__button social__button--youtube" href="#">
               <svg class="social__icon" width="15" height="13">
                 <use xlink:href="#icon-youtube" x="0" y="0" />
               </svg>
@@ -284,7 +284,7 @@
             </a>
           </li>
         </ul>
-        <p class="page-footer__developper">
+        <p class="footer__developper">
           Разработано
           <a href="https://htmlacademy.ru/intensive/htmlcss">
             <svg class="social__icon" width="15" height="13">
@@ -292,7 +292,7 @@
             </svg><span class="visually-hidden">htmlacademy.ru</span>
           </a>
         </p>
-      </div>
+      </div> <!-- wrapper -->
     </footer>
 
   </body>
