--- a/source/form.html
+++ b/source/form.html
@@ -165,7 +165,7 @@
         </div>
         <ul class="footer__social social">
           <li>
-            <a class="social-button social-button--twitter" href="#">
+            <a class="social__button social__button--twitter" href="#">
               <svg class="social__icon" width="18" height="14">
                 <use xlink:href="#icon-twitter" x="0" y="0" />
               </svg>
@@ -173,7 +173,7 @@
             </a>
           </li>
           <li>
-            <a class="social-button social-button--facebook" href="#">
+            <a class="social__button social__button--facebook" href="#">
               <svg class="social__icon" width="9" height="18">
                 <use xlink:href="#icon-facebook" x="0" y="0" />
               </svg>
@@ -181,7 +181,7 @@
             </a>
           </li>
           <li>
-            <a class="social-button social-button--youtube" href="#">
+            <a class="social__button social__button--youtube" href="#">
               <svg class="social__icon" width="15" height="13">
                 <use xlink:href="#icon-youtube" x="0" y="0" />
               </svg>
